--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <footer class="rodape">
           <div>
-           <p>Copyright©2020. Todos os direitos reservados. | Desenvolvido por </p> <a href="#">Ramon Gomes</a>
+           <p>Copyright©2020. Todos os direitos reservados. | Desenvolvido por </p> <a href="#">Jessica de Oliveira</a>
           </div>
         </footer>
 
